# image_processor_homework

./: .gitignore  Doxyfile  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  Doxyfile
cpp/docs/html/: Compressor_8cc.html  Compressor_8cc__incl.map  Compressor_8cc__incl.md5  Compressor_8cc_a40a397f9f192a857e7766eaf692d0f58_icgraph.map  Compressor_8cc_a40a397f9f192a857e7766eaf692d0f58_icgraph.md5  Compressor_8cc_a439b9169b21c2927e3e35e6358b24c05_icgraph.map  Compressor_8cc_a439b9169b21c2927e3e35e6358b24c05_icgraph.md5  Compressor_8h.html  Compressor_8h__dep__incl.map  Compressor_8h__dep__incl.md5  Compressor_8h__incl.map  Compressor_8h__incl.md5  Compressor_8h_source.html  ImageIO_8cc.html  ImageIO_8cc__incl.map  ImageIO_8cc__incl.md5  ImageIO_8cc_abf52dea1c5c11dcb0a9747e18f6368ea_icgraph.map  ImageIO_8h.html  ImageIO_8h__dep__incl.map  ImageIO_8h__dep__incl.md5  ImageIO_8h__incl.map  ImageIO_8h__incl.md5  ImageIO_8h_source.html  ImageProcessor_8cc.html  ImageProcessor_8cc__incl.map  ImageProcessor_8cc__incl.md5  ImageProcessor_8cc_a9110affa25a196d5eca48dc9006b8c3a_icgraph.map  ImageProcessor_8cc_a9110affa25a196d5eca48dc9006b8c3a_icgraph.md5  ImageProcessor_8h.html  ImageProcessor_8h__dep__incl.map  ImageProcessor_8h__dep__incl.md5  ImageProcessor_8h__incl.map  ImageProcessor_8h__incl.md5  ImageProcessor_8h_source.html  Ppm_8cc.html  Ppm_8cc__incl.map  Ppm_8cc__incl.md5  Ppm_8cc_ac7b87a81313fd97a2fac93e28df9b8ef_icgraph.map  Ppm_8cc_ac7b87a81313fd97a2fac93e28df9b8ef_icgraph.md5  Ppm_8h.html  (+76 more)
cpp/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_6.js
cpp/docs/latex/: Compressor_8cc.tex  Compressor_8cc__incl.md5  Compressor_8cc_a40a397f9f192a857e7766eaf692d0f58_icgraph.md5  Compressor_8cc_a439b9169b21c2927e3e35e6358b24c05_icgraph.md5  Compressor_8h.tex  Compressor_8h__dep__incl.md5  Compressor_8h__incl.md5  Compressor_8h_source.tex  ImageIO_8cc.tex  ImageIO_8cc__incl.md5  ImageIO_8cc_abf52dea1c5c11dcb0a9747e18f6368ea_icgraph.md5  ImageIO_8h.tex  ImageIO_8h__dep__incl.md5  ImageIO_8h__incl.md5  ImageIO_8h_source.tex  ImageProcessor_8cc.tex  ImageProcessor_8cc__incl.md5  ImageProcessor_8cc_a9110affa25a196d5eca48dc9006b8c3a_icgraph.md5  ImageProcessor_8h.tex  ImageProcessor_8h__dep__incl.md5  ImageProcessor_8h__incl.md5  ImageProcessor_8h_source.tex  Ppm_8cc.tex  Ppm_8cc__incl.md5  Ppm_8cc_ac7b87a81313fd97a2fac93e28df9b8ef_icgraph.md5  Ppm_8h.tex  Ppm_8h__dep__incl.md5  Ppm_8h__incl.md5  Ppm_8h_source.tex  Triplet_8cc.tex  Triplet_8cc__incl.md5  Triplet_8h.tex  Triplet_8h__dep__incl.md5  Triplet_8h__incl.md5  Triplet_8h_source.tex  annotated.tex  classCompressor.tex  classCompressor__coll__graph.md5  classCompressor_aa04164c2ad51f4d0990e73e8f7227da1_cgraph.md5  classImageIO.tex  (+28 more)
cpp/src/codec/: Compressor.cc  Compressor.h  compressor.cc  compressor.h
cpp/src/data_structure/: Triplet.cc  Triplet.h  triplet.cc  triplet.h
cpp/src/imgproc/: ImageProcessor.cc  ImageProcessor.h  image_processor.cc  image_processor.h
cpp/src/io/: ImageIO.cc  ImageIO.h  Ppm.cc  Ppm.h  image_io.cc  image_io.h  ppm.cc  ppm.h
cpp/test/: CMakeLists.txt  main_test.cc  unit_codec.cc  unit_imgproc.cc  unit_io.cc
data/: output
data_out/: image.ppm
dist-electron/: main.js  preload.mjs
docs/: assignment.md  design.md  development_record.md  size_record.md
docs/html/: App_8tsx.html  App_8tsx__incl.map  App_8tsx__incl.md5  Compressor_8cc.html  Compressor_8cc__incl.map  Compressor_8cc__incl.md5  Compressor_8cc_a40a397f9f192a857e7766eaf692d0f58_icgraph.map  Compressor_8cc_a40a397f9f192a857e7766eaf692d0f58_icgraph.md5  Compressor_8cc_a439b9169b21c2927e3e35e6358b24c05_icgraph.map  Compressor_8cc_a439b9169b21c2927e3e35e6358b24c05_icgraph.md5  Compressor_8h.html  Compressor_8h__dep__incl.map  Compressor_8h__dep__incl.md5  Compressor_8h__incl.map  Compressor_8h__incl.md5  Compressor_8h_source.html  ImageIO_8cc.html  ImageIO_8cc__incl.map  ImageIO_8cc__incl.md5  ImageIO_8cc_abf52dea1c5c11dcb0a9747e18f6368ea_icgraph.md5  ImageIO_8h.html  ImageIO_8h__dep__incl.map  ImageIO_8h__dep__incl.md5  ImageIO_8h__incl.map  ImageIO_8h__incl.md5  ImageIO_8h_source.html  ImageProcessor_8cc.html  ImageProcessor_8cc__incl.map  ImageProcessor_8cc__incl.md5  Ppm_8cc.html  (+265 more)
electron/: electron-env.d.ts  main.ts  preload.ts
native-addon/: binding.gyp  index.js  package-lock.json  package.json
src/: App.tsx  main.tsx
(+213 files in other folders)
